# opencl-hello-world

./: .gitignore  README.md
addition/: CMakeCache.txt  CMakeLists.txt  Makefile  addition.cl  cmake_install.cmake  main.cpp  utils.cpp  utils.hpp
common/: jpeg_loader.cpp  jpeg_loader.hpp  utils.cpp  utils.hpp
convolution/: CMakeLists.txt  kernel.hpp  main.cpp
img-rotate/: CMakeLists.txt  main.cpp
mul-c/: CMakeLists.txt  main.cpp  mul.cl
multiplication-python/: cl_mul.py  mul.cl  mul.py  mul_playground.ipynb
n-body/: CMakeLists.txt  main.cpp
